# internet-speed

./: .gitignore  README.md  pyproject.toml
internet_speed/: main.py
